--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -96,8 +96,8 @@ $cover-height: 100vh;
       position: relative;
       top: 5px;
 
-      -webkit-animation: action 1s infinite alternate;
-      animation: action 1s infinite alternate;
+      -webkit-animation: bounce 1s infinite alternate;
+      animation: bounce 1s infinite alternate;
     }
   }
 }
@@ -143,7 +143,11 @@ nav {
   }
 }
 
-@-webkit-keyframes action {
+section mat-card {
+  min-height: 500px;
+}
+
+@-webkit-keyframes bounce {
   0% {
     transform: translateY(0);
   }
@@ -151,7 +155,7 @@ nav {
     transform: translateY(-10px);
   }
 }
-@keyframes action {
+@keyframes bounce {
   0% {
     transform: translateY(0);
   }
