--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,9 +38,14 @@ $cover-height: 100vh;
     font-weight: 200;
   }
 
-  hr,
-  .description {
-    margin: 20px 0;
+  hr {
+    border: 0;
+    border-top: 1px solid var(--white);
+    display: block;
+    height: 1px;
+    // margin: 1em 0;
+    margin: 0;
+    padding: 0;
   }
 
   // .cover-content {
@@ -49,6 +54,11 @@ $cover-height: 100vh;
   //   text-align: center;
   //   text-transform: uppercase;
   // }
+
+  .title,
+  .description {
+    margin: 20px 0;
+  }
 
   .cta {
     .button-wrapper {
@@ -74,8 +84,9 @@ $cover-height: 100vh;
 
   .down-wrapper {
     align-items: center;
-    background-color: var(--primary);
+    background-color: var(--white);
     bottom: 0;
+    color: var(--dark-gray);
     cursor: pointer;
     display: flex;
     height: 80px;
@@ -90,8 +101,8 @@ $cover-height: 100vh;
     }
 
     mat-icon {
-      font-size: 63px;
-      width: 63px;
+      // font-size: 63px;
+      // width: 63px;
 
       position: relative;
       top: 5px;
@@ -110,13 +121,20 @@ nav {
   top: 100%;
   right: 5%;
 
+  &.fixed {
+    padding-top: 33px; // 33px
+    position: fixed;
+    top: 0;
+    transition: padding 1s ease, position 1s ease;
+  }
+
   ul {
     margin: 0;
     padding: 0;
 
     li {
       align-items: center;
-      background-color: var(--primary);
+      background-color: var(--dark-gray);
       // border-bottom: 1px solid var(--white);
       color: var(--white);
       cursor: pointer;
@@ -127,17 +145,8 @@ nav {
       width: 100%;
 
       &.active {
-        background-color: var(--secondary);
-        color: var(--black);
-      }
-
-      a {
-        color: var(--white);
-        text-decoration: none;
-
-        &.active {
-          color: var(--black);
-        }
+        background-color: var(--primary);
+        // color: var(--black);
       }
     }
   }
