--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -6,7 +6,7 @@
   --white: rgb(255, 255, 255);
   --off-white: #fffafa;
   --black: rgb(0, 0, 0);
-  --gray: #ccc;
+  --gray: #3d3d3d;
   --dark-gray: #333;
 }
 
