--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,18 +14,9 @@ body {
 }
 
 body {
-  background-color: var(--dark-gray);
+  background-color: var(--gray);
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-hr {
-  border: 0;
-  border-top: 1px solid var(--gray);
-  display: block;
-  height: 1px;
-  margin: 1em 0;
-  padding: 0;
 }
 
 mat-card {
