Change background-color when hovering a nav li element

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,11 +27,17 @@ nav {
       height: 80px;
       justify-content: center;
       text-transform: uppercase;
+      transition: all 0.2s;
       width: 100%;
 
       &.active {
         background-color: var(--primary);
         // color: var(--black);
+      }
+
+      &:hover {
+        background-color: var(--black);
+        transition: all 0.3s;
       }
     }
   }
