--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,22 @@
 <section id="cover" class="cover" spyTarget="cover">
   <div class="cover-content">
-    <h1 class="title" wmAnimate="fadeInUp" aos>Matt Blum</h1>
+    <h1 class="title" wmAnimate="fadeInUp">Matt Blum</h1>
     <!-- .title -->
 
-    <hr wmAnimate="fadeIn" aos delay="250ms" />
+    <hr wmAnimate="fadeIn" delay="250ms" />
 
-    <h3 class="description" wmAnimate="fadeInDown" aos delay="500ms">
+    <h3 class="description" wmAnimate="fadeInDown" delay="500ms">
       Front-End Developer
     </h3>
     <!-- .description -->
 
     <div class="cta">
-      <div class="button-wrapper" wmAnimate="fadeInDown" aos delay="750ms">
+      <div class="button-wrapper" wmAnimate="fadeInDown" delay="750ms">
         <a href="mailto:matt.blum@live.com" mat-raised-button color="primary">
           <mat-icon>email</mat-icon>Contact Me
         </a>
       </div>
-      <div class="button-wrapper" wmAnimate="fadeInDown" aos delay="1000ms">
+      <div class="button-wrapper" wmAnimate="fadeInDown" delay="1000ms">
         <button mat-raised-button color="primary">
           <mat-icon>cloud_download</mat-icon>PDF Version
         </button>
@@ -30,7 +30,6 @@
     class="down-wrapper"
     (click)="scrollToId('header')"
     wmAnimate="fadeInUp"
-    aos
     delay="250ms"
   >
     <div class="down">
@@ -108,7 +107,7 @@
       <a href="#">Matt Blum</a>
     </h1>
     <h1 class="side-title" wmAnimate="fadeInRight" aos delay="250ms">
-      <span>Front-End Developer</span>
+      <span><span class="top-line">&nbsp;</span>Front-End Developer</span>
     </h1>
   </section>
   <!-- #header -->
@@ -133,6 +132,10 @@
 
   <section id="skills" spyTarget="skills" wmAnimate="fadeInDown" aos>
     <mat-card>
+      <!-- <div class="line-container" wmAnimate="fadeInUp">
+        <div class="line line-x"></div>
+        <div class="line line-x-2"></div>
+      </div> -->
       <div class="header">
         <h2 class="title" wmAnimate="fadeInUp" aos>Skills</h2>
         <div class="title-blurb" wmAnimate="fadeInDown" aos delay="250ms">
