Remove unnecessary commented code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -114,14 +114,10 @@
 
   <section id="profile" spyTarget="profile" wmAnimate="fadeInDown" aos>
     <mat-card>
-      <div class="header">
-        <h2 class="title" wmAnimate="fadeInUp" aos>Profile</h2>
-        <div class="title-blurb" wmAnimate="fadeInDown" aos delay="250ms">
-          About me
-        </div>
-        <div class="clear-fix"></div>
-      </div>
-      <!-- .header -->
+      <app-section-header
+        [title]="'Profile'"
+        [titleBlurb]="'About Me'"
+      ></app-section-header>
       <div class="content" wmAnimate="fadeInDown" aos delay="500ms">
         Content
       </div>
@@ -132,18 +128,10 @@
 
   <section id="skills" spyTarget="skills" wmAnimate="fadeInDown" aos>
     <mat-card>
-      <!-- <div class="line-container" wmAnimate="fadeInUp">
-        <div class="line line-x"></div>
-        <div class="line line-x-2"></div>
-      </div> -->
-      <div class="header">
-        <h2 class="title" wmAnimate="fadeInUp" aos>Skills</h2>
-        <div class="title-blurb" wmAnimate="fadeInDown" aos delay="250ms">
-          Skills blurb
-        </div>
-        <div class="clear-fix"></div>
-      </div>
-      <!-- .header -->
+      <app-section-header
+        [title]="'Skills'"
+        [titleBlurb]="'Skills Blurb'"
+      ></app-section-header>
       <div class="content" wmAnimate="fadeInDown" aos delay="500ms">
         <div class="row">
           <div class="col-6" *ngFor="let skill of skills; let i = index">
@@ -174,14 +162,10 @@
 
   <section id="projects" spyTarget="projects" wmAnimate="fadeInDown" aos>
     <mat-card>
-      <div class="header">
-        <h2 class="title" class="title" wmAnimate="fadeInUp" aos>Projects</h2>
-        <div class="title-blurb" wmAnimate="fadeInDown" aos delay="250ms">
-          Projects blurb
-        </div>
-        <div class="clear-fix"></div>
-      </div>
-      <!-- .header -->
+      <app-section-header
+        [title]="'Projects'"
+        [titleBlurb]="'Projects Blurb'"
+      ></app-section-header>
       <div class="content" wmAnimate="fadeInDown" aos delay="500ms">
         Content
       </div>
@@ -192,14 +176,10 @@
 
   <section id="experience" spyTarget="experience" wmAnimate="fadeInDown" aos>
     <mat-card>
-      <div class="header">
-        <h2 class="title" wmAnimate="fadeInUp" aos>Experience</h2>
-        <div class="title-blurb" wmAnimate="fadeInDown" aos delay="250ms">
-          Experience blurb
-        </div>
-        <div class="clear-fix"></div>
-      </div>
-      <!-- .header -->
+      <app-section-header
+        [title]="'Experience'"
+        [titleBlurb]="'Experience Blurb'"
+      ></app-section-header>
       <div class="content" wmAnimate="fadeInDown" aos delay="500ms">
         Content
       </div>
@@ -209,15 +189,11 @@
   <!-- #experience -->
 
   <section id="education" spyTarget="education" wmAnimate="fadeInDown" aos>
-    <mat-card id="education">
-      <div class="header">
-        <h2 class="title" class="title" wmAnimate="fadeInUp" aos>Education</h2>
-        <div class="title-blurb" wmAnimate="fadeInDown" aos delay="250ms">
-          Education blurb
-        </div>
-        <div class="clear-fix"></div>
-      </div>
-      <!-- .header -->
+    <mat-card>
+      <app-section-header
+        [title]="'Education'"
+        [titleBlurb]="'Education Blurb'"
+      ></app-section-header>
       <div class="content" wmAnimate="fadeInDown" aos delay="500ms">
         Content
       </div>
