--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -3,8 +3,8 @@
   --secondary: rgb(255, 215, 64);
   --white: rgb(255, 255, 255);
   --black: rgb(0, 0, 0);
+  --off-black: #333;
   --gray: #3d3d3d;
-  --dark-gray: #333;
 }
 
 // :root {
@@ -12,6 +12,6 @@
 //   --secondary: rgb(208, 168, 92);
 //   --white: rgb(255, 255, 255);
 //   --black: rgb(0, 0, 0);
+//   --off-black: #333;
 //   --gray: #3d3d3d;
-//   --dark-gray: #333;
 // }
