--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,4 @@
 @import "~@angular/material/theming";
-// @import "~bootstrap/dist/css/bootstrap.min";
 @import "~bootstrap/dist/css/bootstrap-grid.min";
 
 @import "./base/colors";
@@ -60,8 +59,7 @@ mat-card {
       font-size: 12px;
       letter-spacing: 1px;
       line-height: 1.5;
-      // min-height: 50px;
-      // min-width: 200px;
+      min-width: 200px;
       padding: 16px 30px;
       text-transform: uppercase;
     }
@@ -77,14 +75,18 @@ $accent-line-height: 76px;
     height: $accent-line-height;
     text-transform: uppercase;
 
-    a {
-      background-color: var(--dark-gray);
-      border-left: 10px solid var(--primary);
+    a,
+    span {
+      background-color: var(--off-black);
       color: var(--white);
+      transition: background-color 0.2s;
+    }
+
+    a {
+      border-left: 10px solid var(--primary);
       float: left;
       padding: 20px;
       text-decoration: none;
-      transition: background-color 0.2s;
 
       &:hover {
         background-color: var(--black);
@@ -93,8 +95,6 @@ $accent-line-height: 76px;
     }
 
     span {
-      background-color: var(--dark-gray);
-      // border-left: 10px solid var(--primary);
       float: right;
       position: relative;
       padding: 20px;
