--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -165,13 +165,12 @@ section {
     padding-top: 50px;
   }
 
-  // TODO: Remove when content pop has been completed
-  mat-card {
-    min-height: 500px;
-  }
-
   .sub-section {
     margin-bottom: 40px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
