--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -40,7 +40,7 @@ mat-card {
   }
 
   .header {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 
     .title {
       background-color: var(--primary);
@@ -68,6 +68,9 @@ mat-card {
 
 $accent-line-height: 76px;
 .mat-typography {
+  font-size: 15px;
+  line-height: 24px;
+
   .side-title {
     color: var(--white);
     font-size: 36px;
