--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -165,6 +165,11 @@ section {
     padding-top: 50px;
   }
 
+  // TODO: Remove after content has been supplied
+  mat-card {
+    min-height: 600px;
+  }
+
   .sub-section {
     margin-bottom: 40px;
 
