Remove section blurb min-width

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -59,7 +59,7 @@ mat-card {
       font-size: 12px;
       letter-spacing: 1px;
       line-height: 1.5;
-      min-width: 200px;
+      // min-width: 200px;
       padding: 16px 30px;
       text-transform: uppercase;
     }
