--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,14 @@
 @import "~@angular/material/theming";
-@import "~bootstrap/dist/css/bootstrap-grid.min";
+@import "bootstrap-grid-only/bootstrap";
 
 @import "./base/colors";
 @import "./base/lib";
 @import "./components/mat-buttons";
 @import "./components/mat-cards";
 @import "./themes/resume-mat-theme";
+
+// @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
+// @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 html,
 body {
